[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyapt"
version = "0.0.7"
requires-python = ">=3.12"
authors = [
	{ name = "Mark Veltzer", email = "mark.veltzer@gmail.com" }
]
maintainers = [
	{ name = "Mark Veltzer", email = "mark.veltzer@gmail.com" }
]
description = "module to help you maintain third party apt repos in a sane way"
readme = "README.md"
license = "MIT"
keywords=[
    "pyapt",
    "apt",
    "apt-key",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "pytconf",
    "pylogconf",
]

[project.urls]
"Homepage" = "https://github.com/veltzer/pyapt"
"Bug Tracker" = "https://github.com/veltzer/pyapt/issues"
"Documentation" = "https://veltzer.github.io/pyapt"
"Download" = "https://pypi.org/project/pyapt/"
"Repository" = "https://github.com/veltzer/pyapt"

[project.scripts]
pyapt_update = "pyapt.scripts.update:main"

[tool.ruff]
line-length = 130

[tool.pytest.ini_options]
pythonpath = ["src"]
